--- a/MSL/App.config
+++ b/MSL/App.config
@@ -1,13 +1,13 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
-    </startup>
+        
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup>
 
   <connectionStrings>
-    <add name="LMS4P" providerName="System.Data.OracleClient" connectionString="user id=LMS_APP;password=vorxhfl2017!;data source=(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=10.224.5.28)(PORT=2200))(CONNECT_DATA=(SERVICE_NAME=LMS4PP)))" />
-    <add name="LMSHS" providerName="System.Data.OracleClient" connectionString="user id=LMS_APP;password=vorxhfl2017!;data source=(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=10.224.5.28)(PORT=2300))(CONNECT_DATA=(SERVICE_NAME=LMSHSP)))" />
-    <add name="LMSDD" providerName="System.Data.OracleClient" connectionString="user id=LMS_APP;password=vorxhfl2017!;data source=(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=10.224.5.28)(PORT=4200))(CONNECT_DATA=(SERVICE_NAME=LMSDDP)))" />
+    <add name="LMS4P" providerName="System.Data.OracleClient" connectionString="user id=LMS_APP;password=vorxhfl2017!;data source=(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=10.224.5.28)(PORT=2200))(CONNECT_DATA=(SERVICE_NAME=LMS4PP)))"/>
+    <add name="LMSHS" providerName="System.Data.OracleClient" connectionString="user id=LMS_APP;password=vorxhfl2017!;data source=(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=10.224.5.28)(PORT=2300))(CONNECT_DATA=(SERVICE_NAME=LMSHSP)))"/>
+    <add name="LMSDD" providerName="System.Data.OracleClient" connectionString="user id=LMS_APP;password=vorxhfl2017!;data source=(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=10.224.5.28)(PORT=4200))(CONNECT_DATA=(SERVICE_NAME=LMSDDP)))"/>
   </connectionStrings>
   
 </configuration>
